[project]
name = "api-birthday"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.0",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.124.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy[asyncio]>=2.0.45",
]

[dependency-groups]
dev = [
    "faker>=38.2.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
